# mojoview

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindInDB8.cmake
src/: CMakeLists.txt  KindsModel.cpp  KindsModel.h  MojAppMain.cpp  MojAppMain.h  MojClientHandler.cpp  MojClientHandler.h  MojWorker.h  booleanmodel.cpp  booleanmodel.h  error.cpp  error.h  main.cpp  mainwindow.cpp  mainwindow.h  mojoview.qrc  settings.ui
